--- a/index.html
+++ b/index.html
@@ -12,6 +12,55 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+        <div class="base">
+            <div class="menu">
+               <div class="icon">
+                  <div class="bar"></div>
+               </div>
+            </div>
+            <div class="icons">
+               <i class="fa fa-user" aria-hidden="true"></i>
+               <i class="fa fa-calendar-o" aria-hidden="true"></i>
+               <i class="fa fa-tachometer" aria-hidden="true"></i>
+            </div>
+            <div class="section">
+               <div class="cover1">
+                  <div class="cover2">
+                     <a class="content" href="#calender"></a>
+                  </div>
+               </div>
+            </div>
+            <a class="section-static top" href="#profile"></a>
+            <a class="section-static bottom" href="#dashboard"></a>
+         </div>
+        <section class="buttons">
+            <h1>Local Food Guide</h1>
+          <div class="container">
+
+            <a href="https://guide.farmfreshri.org/food/farmersmarkets.php?zip=02909" class="btn btn-1">
+              <svg>
+                <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+              </svg>
+             Hover
+            <!-- </a>svg hover inspired by https://codepen.io/karimbalaa/pen/qERbBY?editors=110 -->
+            <!--End of Button 1 -->
+
+            <a href="https://twitter.com/Dave_Conner" class="btn btn-2">Hover</a>
+            <!--End of Button 2 -->
+
+            <a href="https://twitter.com/Dave_Conner" class="btn btn-3">Hover</a>
+            <!--End of Button 3 -->
+
+            <a href="https://twitter.com/Dave_Conner" class="btn btn-4"><span>Hover</span></a>
+            <!--End of Button 4 -->
+
+            <a href="https://twitter.com/Dave_Conner" class="btn btn-5">Hover</a> -->
+            <!--End of Button 5 -->
+
+
+          </div>
+          <!-- <p>Follow on <a href="https://twitter.com/Dave_Conner" target="_blank">Twitter</a></p> -->
+        </section>
+      <!-- <h1>Browser Template</h1> -->
     </body>
 </html>
